--- a/projects/skeleton/src/index.html
+++ b/projects/skeleton/src/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Skeleton</title>
-		<base href="/test" />
+		<base href="/skeleton/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 	</head>
